mejora nombres variables